# src/login.go
@@ -1,6 +1,7 @@
 package main
 
 import (
+	"database/sql"
 	"net/http"
 	"time"
 
@@ -8,29 +9,38 @@ import (
 	"github.com/gin-gonic/gin"
 	_ "github.com/im-mk/user-service/src/docs"
 	"github.com/im-mk/user-service/src/models"
+	"golang.org/x/crypto/bcrypt"
 )
-
-var jwtKey = []byte("my_secret_key")
 
 // @Summary Logs in a user
 // @Description Logs in a user and returns a JWT token
 // @Tags auth
 // @Accept  json
 // @Produce  json
-// @Param   credentials body models.Credentials true "User credentials"
+// @Param   credentials body models.LoginRequest true "User credentials"
 // @Success 200 {string} string "token"
 // @Failure 400 {object} gin.H "Invalid request"
 // @Failure 500 {object} gin.H "Could not create token"
 // @Router /login [post]
 func loginHandler(c *gin.Context) {
-	var creds models.Credentials
+	var creds models.LoginRequest
 	if err := c.BindJSON(&creds); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request"})
 		return
 	}
 
-	// temp logic
-	if creds.Username != "user1" || creds.Password != "password1" {
+	var user models.User
+	err := db.QueryRow("SELECT id, username, password FROM users WHERE username = $1", creds.Username).Scan(&user.ID, &user.Username, &user.Password)
+	if err == sql.ErrNoRows {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid credentials"})
+		return
+	} else if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Server error"})
+		return
+	}
+
+	err = bcrypt.CompareHashAndPassword([]byte(user.Password), []byte(creds.Password))
+	if err != nil {
 		c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid credentials"})
 		return
 	}
